# furigana-spans

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  dictionary_difficulty_demo.py  user_dict.json
furigana_spans/: __init__.py  ambiguity.py  analyzer.py  candidate_generator.py  config.py  difficulty.py  japanese_numbers.py  lexicon.py  normalizer.py  number_rules.py  oov_fallback.py  schema.py  script.py  span_builder.py  user_dict.py
furigana_spans/backends/: __init__.py  base.py  sudachi_backend.py
furigana_spans/lexicons/: __init__.py  domain.py  frequency.py
tests/: test_ambiguity.py  test_analyzer_pipeline.py  test_difficulty.py  test_numbers.py  test_scripts.py
tools/: convert_bccwj_frequency.py  convert_nbdc_terms.py
